linked .js files to HTML doc

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <DOCTYPE html>
-<html>
+<html ng-app="parseQ">
 <head>
 	<title>ParseQ</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body ng-controller="MainController">
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/defaultHeaders.js"></script>
+<script src="js/MainController.js"></script>
+<script src="js/parseService.js"></script>
 </body>
 </html>
